<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="text_missed_call">Missed call</string>
    <string name="text_call_back">Call back</string>
    <string name="app_logo">Taaly app logo</string>
    <string name="app_name">Taaly</string>
    <string name="call_description">Video calling on Taaly...</string>
</resources>